Se agrego correciones del index, login, sign up con respecto al nav y footer. Tambien se agrego perfil.

--- a/html/explorar.html
+++ b/html/explorar.html
@@ -47,7 +47,9 @@
 <div class="headerDesk col-12 d-none d-sm-block">
     <div class="row h-100">
        <div class="col-2 d-sm-flex align-items-center">
-           <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="20%" height="60%">
+            <a href="home.html">
+                <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="70%" height="20%">
+            </a>
         </div>
        <div class="col-6 d-sm-flex align-items-center">
             <img class="ajustarLupa" src="../img/lupa.png" alt="search" width="5%" height="38%">  
@@ -72,7 +74,7 @@
     <div class="row">
         <div class="col-2">
             <div class="fixed">
-
+                <div class="row title-nav"><h4 class="c-lBlue">SPOILER FIVE</h4></div>
             <div class="row navs c-ico"> 
                 <div class="col-12 text-center mt-4">
                     <a href="home.html"><img src="../img/hogar.png" width="20%" height="30%"></a>
