--- a/html/home.html
+++ b/html/home.html
@@ -48,7 +48,9 @@
     <div class="headerDesk col-12 d-none d-sm-block">
         <div class="row h-100">
            <div class="col-2 d-sm-flex align-items-center">
-               <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="20%" height="60%">
+                <a href="home.html">
+                    <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="70%" height="20%">
+                </a>
             </div>
            <div class="col-6 d-sm-flex align-items-center">
                 <img class="ajustarLupa" src="../img/lupa.png" alt="search" width="5%" height="38%">  
@@ -57,8 +59,10 @@
            <div class="col-4 text-center d-sm-flex align-items-center justify-content-end pl-2"> 
                <!-- <div class="col-2"> -->
                 <div class="user-container mb-2">
-                    <img src="../img/usuario.png" alt="perfil" height="23px" >
-                    <span class="p-user">John86</span>
+                    <a href="perfil.html">
+                        <img src="../img/usuario.png" alt="perfil" height="23px" >
+                    </a>
+                        <span class="p-user">John86</span>
                 </div>
                <!-- </div> -->
                <img class="ml-4 mr-4"src="../img/campana.png" alt="notificaciones" height="40%">
@@ -73,7 +77,7 @@
         <div class="row">
             <div class="col-2">
                 <div class="fixed">
-
+                <div class="row title-nav"><h4 class="c-lBlue">SPOILER FIVE</h4></div>
                 <div class="row navs"> 
                     <div class="col-12 text-center mt-4">
                         <a href="home.html"><img src="../img/casa.png" width="20%" height="30%"></a>
