--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,9 @@
         <div class="container-fluid landing-header">
             <div class="row full-height">
                 <div class="d-none col-sm-4 d-sm-flex align-items-center">
-                    <img src="../img/spoilerfive-logo.png" class="spoiler-logo" alt="">
+                    <a href="home.html">
+                        <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="70%" height="20%">
+                   </a>
                 </div>
                 <div class="col-12 col-sm-4 align-full-center">
                     <h1 class="landing-title">
@@ -88,7 +90,7 @@
         <div class="container-fluid landing-footer">
             <div class="row">
                 <!-- Mobile start -->
-                <div class="col-5 d-sm-none d-flex justify-content-center align-items-center">
+                <div class="col-5 d-sm-none d-flex justify-content-center align-items-center mt-3">
                     <a href="../index.html">
                         <button type="button" style="width: 100%;" class="btn access-button">
                             VOLVER
