--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="col d-sm-none d-flex justify-content-center align-items-center">
                     <div class="w-100">
                         <a href="html/login.html">
-                            <button type="button" style="width: 100%;" class="btn access-button">
+                            <button type="button" style="width: 100%;" class="btn access-button mt-3">
                                 INICIAR SESIÓN
                             </button>
                         </a>
@@ -159,7 +159,7 @@
                 <div class="col d-sm-none  d-flex justify-content-center align-items-center">
                     <div class="w-100">
                         <a href="html/sign-up.html">
-                            <button type="button" style="width: 100%;" class="btn access-button">
+                            <button type="button" style="width: 100%;" class="btn access-button mt-3">
                                 REGISTRARSE
                             </button>
                         </a>
