se corrigio bug de nav. quedo en perfecto estado.

--- a/html/seguidores.html
+++ b/html/seguidores.html
@@ -35,7 +35,7 @@
                         </a>
                 </div>
                 <div>
-                        <a href="notificaciones.html">
+                        <a href="configuracion.html">
                                 <img src="../img/ajustes.png" width="50%" height="20%">
                         </a>
                 </div>
