--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="container-fluid landing-header">
             <div class="row full-height">
                 <div class="d-none col-sm-4 d-sm-flex align-items-center">
-                    <img src="./img/spoilerfive-logo.png" class="spoiler-logo" alt="">
+                    <a href="index.html">
+                        <img src="img/spoilerfive-logo.png" alt="spoiler-five" width="70%" height="20%">
+                    </a>
                 </div>
                 <div class="col-12 col-sm-4 align-full-center">
                     <h1 class="landing-title">
