--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -65,7 +65,7 @@
                     </a>
             </div>
             <div>
-                    <a href="notificaciones.html">
+                    <a href="configuracion.html">
                             <img src="../img/ajustes.png" width="50%" height="20%">
                     </a>
             </div>
