--- a/html/perfil.html
+++ b/html/perfil.html
@@ -70,7 +70,7 @@
                     </a>
             </div>
             <div>
-                    <a href="notificaciones.html">
+                    <a href="configuracion.html">
                             <img src="../img/ajustes.png" width="50%" height="20%">
                     </a>
             </div>
