--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,7 @@
         <div class="container-fluid landing-header">
             <div class="row full-height">
                 <div class="d-none col-sm-4 d-sm-flex align-items-center">
-                    <a href="home.html">
+                    <a href="../index.html">
                         <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="70%" height="20%">
                    </a>
                 </div>
