Se agrego header y footer de mobile.

--- a/html/home.html
+++ b/html/home.html
@@ -11,40 +11,24 @@
 </head>
 
 <!-- VISIBLE SOLO EN XS   mobile-->
-    <div class="header col-12 d-block d-sm-none">
-        <div class="row mt-3">
-            <div class="title col-8"></div>
-            <div class="search col-2"></div>
-            <div class="config col-2"></div>
-        </div>
-    </div>
+  	<!-- MOBILE -->
+	<div class="header-mob d-block d-sm-none">
+		
+	</div>
 
-    <div class="container col-12 d-block d-sm-none">
+	<div class="container-mob d-block d-sm-none">
 
-        <div class="row">
-            <div class="carrousel"></div>
-        </div>
-        <div class="row">
-            <div class="carrousel"></div>
-        </div>
-        <div class="row">
-            <div class="carrousel"></div>
-        </div>
-    </div>
+	</div>
 
-    <div class="footer col-12 d-block d-sm-none">
-        <div class="row">
-            <div class="col-3 fot"></div>
-            <div class="col-3 fot"></div>
-            <div class="col-3 fot"></div>
-            <div class="col-3 fot"></div>
-        </div>
-    </div>
+	<div class="footer-mob d-block d-sm-none">
+
+	</div>
+	<!-- MOBILE -->
 <!-- FIN DE VISIBLE EN XS      mobile-->
 
 
 
-<!-- OCULTO SOLO EN XS     desktop -->
+<!-- OCULTO SOLO EN XS     DESKTOP -->
     <div class="headerDesk col-12 d-none d-sm-block">
         <div class="row h-100">
            <div class="col-2 d-sm-flex align-items-center">
