--- a/html/perfil.html
+++ b/html/perfil.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 
-<div class="footer col-12 d-block d-sm-none">
+<div class="footerMob col-12 d-block d-sm-none">
     <div class="row">
         <div class="col-3 fot"></div>
         <div class="col-3 fot"></div>
@@ -165,7 +165,7 @@
     </div>
 </div>
 
-        <footer>
+        <footer class="d-none d-sm-block">
             <div class="container-fluid footer">
                 <div class="row">
                     <!-- Desktop start -->
