--- a/html/configuracion.html
+++ b/html/configuracion.html
@@ -9,7 +9,61 @@
 </head>
 <body>
 	
-   <!-- OCULTO SOLO EN XS     desktop -->
+	<!-- MOBILE -->
+	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center">
+		<div class="row">
+			<div class="col-2 d-flex justify-content-center">
+				<a href="#">
+					<img class="max-h-b-mob" src="../img/volver-flecha.png" alt="">
+				</a>
+			</div>
+			<div class="col-8 d-flex justify-content-center">
+				<h1 class="landing-title">CONFIGURACION</h1>
+			</div>
+			<div class="col-2 d-flex justify-content-center">
+				<a href="#">
+					<img class="max-h-w-mob" src="../img/lupa_blanca.png">
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="container-mob d-block d-sm-none">
+	
+	</div>
+
+	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center">
+		<div class="row mt-2">
+			<div class="col-3 text-center">
+				<a href="">
+					<img class="img-footer-mob" src="../img/casa.png" alt="">
+				</a>
+				<p class="c-lBlue d-flex justify-content-center">HOME</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="">
+					<img class="img-footer-mob" src="../img/explorar_gris.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center">EXPLORAR</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="">
+					<img class="img-footer-mob" src="../img/explorar_gris.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center">NOTIF.</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="">
+					<img class="img-footer-mob" src="../img/libro.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center">BIBLIOTECA</p>
+			</div>
+		</div>
+	</div>
+	<!-- MOBILE -->
+
+
+   <!-- OCULTO SOLO EN XS     DESKTOP -->
    <div class="headerDesk col-12 d-none d-sm-block">
 	<div class="row h-100">
 		<div class="col-2 d-sm-flex align-items-center">
@@ -183,7 +237,7 @@
 		</div>
 	</div> 
 
-	<footer>
+	<footer class="d-none d-sm-block">
 		<div class="container-fluid footer">
 			<div class="row">
 				<!-- Desktop start -->
@@ -202,8 +256,7 @@
 			</div>
 		</div>
 	</footer>
-
-<!-- FIN OCULTO SOLO EN XS     desktop -->
+<!-- FIN OCULTO SOLO EN XS     DESKTOP -->
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
