--- a/html/lista-reproduccion.html
+++ b/html/lista-reproduccion.html
@@ -157,7 +157,7 @@
     </div>
 </div>
 
-        <footer>
+        <footer class="d-none d-sm-block">
             <div class="container-fluid footer">
                 <div class="row">
                     <!-- Desktop start -->
