--- a/html/seguidores.html
+++ b/html/seguidores.html
@@ -77,12 +77,6 @@
                     <div class="row">
                         <div class="col-2">
                             <img class="img-radius ml-1 mt-2" src="../img/chico.png" width="90%" alt="">
-                            <!-- <div class="row title-row">
-                                <h4 class="title-perfil ml-3">Siguiendo (4)</h4>
-                            </div>
-                            <div class="row">
-                                <img class="img-artists ml-3 mt-3" src="../img/nicky.jpg" width="70%" alt="">
-                            </div> -->
                         </div>
                         <div class="col-10 pl-0">
                         <div class="row">
@@ -131,7 +125,7 @@
             </div>
         </div> 
 
-        <footer>
+        <footer class="d-none d-sm-block">
             <div class="container-fluid footer">
                 <div class="row">
                     <!-- Desktop start -->
