Se agrego header y footer en la mayorias de las pag mobile

--- a/html/configuracion.html
+++ b/html/configuracion.html
@@ -10,11 +10,11 @@
 <body>
 	
 	<!-- MOBILE -->
-	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center">
+	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
 		<div class="row">
 			<div class="col-2 d-flex justify-content-center">
 				<a href="#">
-					<img class="max-h-b-mob" src="../img/volver-flecha.png" alt="">
+					<img class="img-fot-head-mob" src="../img/volver-flecha.png" alt="">
 				</a>
 			</div>
 			<div class="col-8 d-flex justify-content-center">
@@ -22,7 +22,7 @@
 			</div>
 			<div class="col-2 d-flex justify-content-center">
 				<a href="#">
-					<img class="max-h-w-mob" src="../img/lupa_blanca.png">
+					<img class="img-fot-head-mob" src="../img/lupa_blanca.png">
 				</a>
 			</div>
 		</div>
@@ -32,31 +32,31 @@
 	
 	</div>
 
-	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center">
+	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
 		<div class="row mt-2">
 			<div class="col-3 text-center">
-				<a href="">
-					<img class="img-footer-mob" src="../img/casa.png" alt="">
+				<a href="home.html">
+					<img class="img-fot-head-mob" src="../img/casa.png" alt="">
 				</a>
-				<p class="c-lBlue d-flex justify-content-center">HOME</p>
+				<p class="c-lBlue d-flex justify-content-center p-small">HOME</p>
 			</div>
 			<div class="col-3 text-center">
-				<a href="">
-					<img class="img-footer-mob" src="../img/explorar_gris.png" alt="">
+				<a href="explorar.html">
+					<img class="img-fot-head-mob" src="../img/explorar_gris.png" alt="">
 				</a>
-				<p class="c-ico d-flex justify-content-center">EXPLORAR</p>
+				<p class="c-ico d-flex justify-content-center p-small">EXPLORAR</p>
 			</div>
 			<div class="col-3 text-center">
-				<a href="">
-					<img class="img-footer-mob" src="../img/explorar_gris.png" alt="">
+				<a href="notificaciones.html">
+					<img class="img-fot-head-mob" src="../img/campana.png" alt="">
 				</a>
-				<p class="c-ico d-flex justify-content-center">NOTIF.</p>
+				<p class="c-ico d-flex justify-content-center p-small">NOTIF.</p>
 			</div>
 			<div class="col-3 text-center">
-				<a href="">
-					<img class="img-footer-mob" src="../img/libro.png" alt="">
+				<a href="biblioteca.html">
+					<img class="img-fot-head-mob" src="../img/libro.png" alt="">
 				</a>
-				<p class="c-ico d-flex justify-content-center">BIBLIOTECA</p>
+				<p class="c-ico d-flex justify-content-center p-small">BIBLIOTECA</p>
 			</div>
 		</div>
 	</div>
