se agrego editar perfil en desktop y algunos detalles en mobile (header, footer)

--- a/html/home.html
+++ b/html/home.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,23 +14,25 @@
 	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
 		<div class="row">
 			<div class="col-2 d-flex justify-content-center">
-				<a href="#">
+				<!-- <a href="#">
 					<img class="img-fot-head-mob" src="../img/volver-flecha.png" alt="">
-				</a>
+				</a> -->
 			</div>
 			<div class="col-8 d-flex justify-content-center ajustar-col">
 				<h1 class="landing-title">HOME</h1>
 			</div>
-			<div class="col-2 d-flex justify-content-center">
-				<a href="#">
-					<img class="img-fot-head-mob" src="../img/lupa_blanca.png">
-				</a>
+			<div class="col-2 d-flex justify-content-center right-ajust">
+				<a href="buscar.html">
+                    <img class="img-fot-head-mob mr-3" src="../img/lupa_blanca.png">
+                </a>
+                <a href="configuracion.html">
+                    <img class="img-fot-head-mob" src="../img/ajustes.png">
+                </a>
 			</div>
 		</div>
 	</div>
 
 	<div class="container-mob d-block d-sm-none">
-	
 	</div>
 
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
