--- a/html/lista-reproduccion.html
+++ b/html/lista-reproduccion.html
@@ -10,37 +10,60 @@
 </head>
 <body>
     
-<!-- VISIBLE SOLO EN XS   mobile-->
-<div class="header col-12 d-block d-sm-none">
-    <div class="row mt-3">
-        <div class="title col-8"></div>
-        <div class="search col-2"></div>
-        <div class="config col-2"></div>
-    </div>
-</div>
+	<!-- MOBILE -->
+	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
+		<div class="row">
+			<div class="col-2 d-flex justify-content-center">
+				<a href="configuracion.html">
+					<img class="img-fot-head-mob" src="../img/volver-flecha.png" alt="">
+				</a>
+			</div>
+			<div class="col-8 d-flex justify-content-center ajustar-col">
+				<h1 class="landing-title">PERFIL</h1>
+			</div>
+			<div class="col-2 d-flex justify-content-center right-ajust">
+				<!-- <a href="buscar.html">
+                    <img class="img-fot-head-mob mr-3" src="../img/lupa_blanca.png">
+                </a>
+                <a href="configuracion.html">
+                    <img class="img-fot-head-mob" src="../img/ajustes.png">
+                </a> -->
+			</div>
+		</div>
+	</div>
 
-<div class="container col-12 d-block d-sm-none">
+	<div class="container-mob d-block d-sm-none">
+	</div>
 
-    <div class="row">
-        <div class="carrousel"></div>
-    </div>
-    <div class="row">
-        <div class="carrousel"></div>
-    </div>
-    <div class="row">
-        <div class="carrousel"></div>
-    </div>
-</div>
-
-<div class="footer col-12 d-block d-sm-none">
-    <div class="row">
-        <div class="col-3 fot"></div>
-        <div class="col-3 fot"></div>
-        <div class="col-3 fot"></div>
-        <div class="col-3 fot"></div>
-    </div>
-</div>
-<!-- FIN DE VISIBLE EN XS      mobile-->
+	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
+		<div class="row mt-2">
+			<div class="col-3 text-center">
+				<a href="home.html">
+					<img class="img-fot-head-mob" src="../img/casa.png" alt="">
+				</a>
+				<p class="c-lBlue d-flex justify-content-center p-small">HOME</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="explorar.html">
+					<img class="img-fot-head-mob" src="../img/explorar_gris.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center p-small">EXPLORAR</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="notificaciones.html">
+					<img class="img-fot-head-mob" src="../img/campana.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center p-small">NOTIF.</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="biblioteca.html">
+					<img class="img-fot-head-mob" src="../img/libro.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center p-small">BIBLIOTECA</p>
+			</div>
+		</div>
+	</div>
+	<!-- MOBILE --> 
 
 
 <!-- OCULTO SOLO EN XS     desktop -->
