--- a/html/seguidores.html
+++ b/html/seguidores.html
@@ -8,6 +8,60 @@
     <title>Perfil</title>
 </head>
 <body>
+    	<!-- MOBILE -->
+	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
+		<div class="row">
+			<div class="col-2 d-flex justify-content-center">
+				<a href="configuracion.html">
+					<img class="img-fot-head-mob" src="../img/volver-flecha.png" alt="">
+				</a>
+			</div>
+			<div class="col-8 d-flex justify-content-center ajustar-col">
+				<h1 class="landing-title">PERFIL</h1>
+			</div>
+			<div class="col-2 d-flex justify-content-center right-ajust">
+				<!-- <a href="buscar.html">
+                    <img class="img-fot-head-mob mr-3" src="../img/lupa_blanca.png">
+                </a>
+                <a href="configuracion.html">
+                    <img class="img-fot-head-mob" src="../img/ajustes.png">
+                </a> -->
+			</div>
+		</div>
+	</div>
+
+	<div class="container-mob d-block d-sm-none">
+	</div>
+
+	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
+		<div class="row mt-2">
+			<div class="col-3 text-center">
+				<a href="home.html">
+					<img class="img-fot-head-mob" src="../img/casa.png" alt="">
+				</a>
+				<p class="c-lBlue d-flex justify-content-center p-small">HOME</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="explorar.html">
+					<img class="img-fot-head-mob" src="../img/explorar_gris.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center p-small">EXPLORAR</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="notificaciones.html">
+					<img class="img-fot-head-mob" src="../img/campana.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center p-small">NOTIF.</p>
+			</div>
+			<div class="col-3 text-center">
+				<a href="biblioteca.html">
+					<img class="img-fot-head-mob" src="../img/libro.png" alt="">
+				</a>
+				<p class="c-ico d-flex justify-content-center p-small">BIBLIOTECA</p>
+			</div>
+		</div>
+	</div>
+	<!-- MOBILE --> 
     <!-- OCULTO SOLO EN XS     desktop -->
         <div class="headerDesk col-12 d-none d-sm-block">
         <div class="row h-100">
