--- a/html/home.html
+++ b/html/home.html
@@ -33,13 +33,173 @@
 	</div>
 
 	<div class="container-mob d-block d-sm-none">
+
+        <div class="col-12">
+            <h5 class="c-white">LO ULTIMO</h5>
+        </div>
+        <div class="carrousel-mob ml-3 mt-2">
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+        </div>  
+
+                <div class="col-12 mt-5">
+                    <h5 class="c-white">ESCUCHADAS RECIENTEMENTE</h5>
+                </div>
+                <div class="carrousel-mob ml-3 mt-2">
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+            </div>  
+
+            <div class="col-12 mt-5">
+                <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
+            </div>
+            <div class="carrousel-mob ml-3 mt-2">
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+            </div>  
+
+        <div class="col-12 d-flex justify-content-center">
+            <button class="btn-add-image" id="masRecomendacionesMob"><img id="imgMasMob" src="../img/anadir.png"></button>
+        </div>
+        <div class="ocultar" id="divMostrarMob">
+            <div class="col-12 mt-5">
+                <h5 class="c-white">RECOMENDACIONES</h5>
+            </div>
+            <div class="carrousel-mob ml-3 mt-2">
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+            </div>
+
+            <div class="col-12 mt-5">
+                <h5 class="c-white">RECOMENDACIONES</h5>
+            </div>
+            <div class="carrousel-mob ml-3 mt-2">
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+            </div>
+        </div>
 	</div>
 
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
 		<div class="row mt-2">
 			<div class="col-3 text-center">
 				<a href="home.html">
-					<img class="img-fot-head-mob" src="../img/casa.png" alt="">
+                    <img class="img-fot-head-mob" src="../img/casa.png" alt="">
 				</a>
 				<p class="c-lBlue d-flex justify-content-center p-small">HOME</p>
 			</div>
@@ -481,7 +641,6 @@
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
                         <button class="btn-add-image" id="masRecomendaciones"><img id="imgMas" src="../img/anadir.png"></button>
-                        <!-- <img src="../img/anadir.png"> -->
                     </div>
                 </div>
 
