--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 	<div class="container-mob d-block d-sm-none">
 
-        <div class="col-12">
+        <div class="col-12 mt-1">
             <h5 class="c-white">LO ULTIMO</h5>
         </div>
         <div class="carrousel-mob ml-3 mt-2">
@@ -299,10 +299,10 @@
                 <div class="row">
                 <h3 class="ml-3 c-white">HOME</h3>
                                                     <!-- LO ULTIMO --> 
-                <div id="carouselExampleInterval" class="carousel slide tCenter" data-ride="carousel">
+                <div id="carouselExampleInterval" class="carousel slide ml-3 mt-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="ml-3 c-white">LO ULTIMO</h5>
+                            <h5 class="c-white">LO ULTIMO</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleInterval" role="button" data-slide="prev">
@@ -412,11 +412,11 @@
 
 
                 <!-- CARROUSEL 2 (Escuchados recientemente) -->
-                <div class="row">
-                    <div id="carouselExampleIntervalTwo" class="carousel slide tCenter" data-ride="carousel">
+                <div class="row mt-4">
+                    <div id="carouselExampleIntervalTwo" class="carousel slide ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="ml-3 c-white">ESCUCHADOS RECIENTEMENTES</h5>
+                            <h5 class="c-white">ESCUCHADOS RECIENTEMENTES</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalTwo" role="button" data-slide="prev">
@@ -526,11 +526,11 @@
 
 
                  <!-- CARROUSEL 3 (Lo que mas le gusta) -->
-                <div class="row">
-                    <div id="carouselExampleIntervalThree" class="carousel slide tCenter" data-ride="carousel">
+                <div class="row mt-4">
+                    <div id="carouselExampleIntervalThree" class="carousel slide tCenter ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="ml-3 c-white">LO QUE MAS TE GUSTA</h5>
+                            <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalThree" role="button" data-slide="prev">
@@ -647,11 +647,11 @@
                  <!--          carrouseles ocultos        -->
                  <!-- CARROUSEL 4 (Recomendados) -->
                  <div class="ocultar" id="divMostrar">
-                 <div class="row">
-                    <div id="carouselExampleIntervalFour" class="carousel slide tCenter" data-ride="carousel">
+                 <div class="row mt-4">
+                    <div id="carouselExampleIntervalFour" class="carousel slide ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="ml-3 c-white">LO QUE MAS TE GUSTA</h5>
+                            <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalFour" role="button" data-slide="prev">
@@ -759,11 +759,11 @@
                 </div>
 
                   <!-- CARROUSEL 5 (Recomendados) -->
-                  <div class="row">
-                    <div id="carouselExampleIntervalFive" class="carousel slide tCenter" data-ride="carousel">
+                  <div class="row mt-4">
+                    <div id="carouselExampleIntervalFive" class="carousel slide ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="ml-3 c-white">LO QUE MAS TE GUSTA</h5>
+                            <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalFive" role="button" data-slide="prev">
