--- a/html/notificaciones.html
+++ b/html/notificaciones.html
@@ -13,9 +13,9 @@
 	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
 		<div class="row">
 			<div class="col-2 d-flex justify-content-center">
-				<a href="#">
+				<!-- <a href="#">
 					<img class="img-fot-head-mob" src="../img/volver-flecha.png" alt="">
-				</a>
+				</a> -->
 			</div>
 			<div class="col-8 d-flex justify-content-center ajustar-col">
 				<h1 class="landing-title">NOTIFICACIONES</h1>
@@ -29,7 +29,50 @@
 	</div>
 
 	<div class="container-mob d-block d-sm-none">
-	
+		<div class="row row-height-mob bg-section border-mob d-flex align-items-center">
+			<div class="col-2 d-flex justify-content-end">
+				<img class="img-fot-head-mob text-center" src="../img/usuario.png" alt="">
+			</div>
+			<div class="col-8">
+				<p class="c-white ajustar-p">Haz tu cuenta premium y disfruta tu musica sin limites</p>
+			</div>
+			<div class="col-2 d-flex justify-content-start">
+				<img class="img-fot-head-mob" src="../img/premium.png" alt="">
+			</div>
+		</div>
+		<div class="row row-height-mob  bg-section border-mob d-flex align-items-center">
+			<div class="col-2 d-flex justify-content-end">
+				<img class="img-fot-head-mob" src="../img/nota-musical.png" alt="">
+			</div>
+			<div class="col-8">
+				<p class="c-white ajustar-p">Tu artista preferido ha sacado un nuevo tema</p>
+			</div>
+			<div class="col-2 justify-content-start">
+				<img class="img-fot-head-mob" src="../img/play.png" alt="">
+			</div>
+		</div>
+		<div class="row row-height-mob  bg-section border-mob d-flex align-items-center">
+			<div class="col-2 d-flex justify-content-end">
+				<img class="img-fot-head-mob" src="../img/nota-musical.png" alt="">
+			</div>
+			<div class="col-8">
+				<p class="c-white ajustar-p">Mira, tal vez esta playlist te interese</p>
+			</div>
+			<div class="col-2 justify-content-start">
+				<img class="img-fot-head-mob" src="../img/play.png" alt="">
+			</div>
+		</div>
+		<div class="row row-height-mob  bg-section border-mob d-flex align-items-center">
+			<div class="col-2 d-flex justify-content-end">
+				<img class="img-fot-head-mob" src="../img/usuario.png" alt="">
+			</div>
+			<div class="col-8">
+				<p class="c-white ajustar-p">Han accedido a tu cuenta desde un dispositivo distinto, eres tú?</p>
+			</div>
+			<div class="col-2 d-flex justify-content-start">
+				<img class="img-fot-head-mob" src="../img/ajustes.png" alt="">
+			</div>
+		</div>
 	</div>
 
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
